--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <!-- Nav sections -->
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+              <li class="nav-item">
+                    <a class="nav-link" href="index.html">Inicio</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Equipos</a>
                 </li>
@@ -48,60 +51,128 @@
     </nav>
   </header>
 
- <div id="newsCarousel" class="carousel slide">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#newsCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#newsCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#newsCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  <!-- Carousel noticias -->
+  <main>
+    <div class="carousel-container">
+  <!--  <h1 class="text-center mb-4 fw-bold">Todas las noticias del día</h1> -->
+    <div id="newsCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+          <button type="button" data-bs-target="#newsCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#newsCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#newsCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+          <img src="assetss/volleyball.jpg" class="d-block w-100" style="max-height: 500px;" alt="Noticas sobre voleibol">
+          <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
+            <h5 class="fw-bold">Torneo de voleibol escolar</h5>
+            <p>Las semifinales prometen grandes emociones este fin de semana.</p>
+            <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="modalVoleibol">
+              Saber más
+            </button>
+          </div>
+          </div>
+          <div class="carousel-item">
+          <img src="assetss/baloncesto.jpg" class="d-block w-100" style="max-height: 500px;" alt="Noticias sobre baloncesto">
+          <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
+            <h5 class="fw-bold">Próximas clasificaciones para los equipos de baloncesto</h5>
+            <p>Los días 21 y 22 de noviembre se comparten el listado con las clasificaciones para el año 2026.</p>
+          </div>
+          </div>
+          <div class="carousel-item">
+          <img src="assetss/futbol.jpg" class="d-block w-100" style="max-height: 500px;" alt="Notiicias sobre futbol">
+          <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
+            <h5 class="fw-bold">Torneos de futbol juvenil</h5>
+            <p>Todos los fines de semana del año 2026 comienzan los torneos juveniles de futbol.</p>
+          </div>
+          </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#newsCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-        <img src="assetss/facebook.png" class="d-block w-100" style="height: 350px;" alt="...">
+  </div>
+ 
+    <!-- Competiciones -->
+    <section id="competitions" class="py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="fw-bold">Competiciones actuales</h1>
+          <p class="lead">Consulta el estado de las competiciones existentes.</p>
         </div>
-        <div class="carousel-item">
-        <img src="assetss/instagram.png" class="d-block w-100" style="height: 350px;" alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="assetss/X_icon.png" class="d-block w-100" style="height: 350px;" alt="...">
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#newsCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
- </div>
 
+        <div class="row g-4">
+        <!-- Competición 1 -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm border-0">
+            <img src="assetss/futbol.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Fútbol">
+            <div class="card-body">
+              <h5 class="card-title text-primary fw-bold">Liga de Fútbol Escolar</h5>
+              <p class="card-text">12 equipos compiten por el trofeo anual. La temporada se extiende de octubre a marzo.</p>
+              <p class="text-muted small">Próxima jornada: 15 de noviembre</p>
+            </div>
+            <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
+              <a href="#" class="btn btn-primary btn-sm">Ver resultados</a>
+              <a href="#" class="btn btn-outline-primary btn-sm">Inscribirse</a>
+            </div>
+          </div>
+        </div>
 
-    <section class="hero bg-dark text-white text-center p-5">
-    <div class="container">
-        <h1 class="display-4">¡Bienvenido a la Liga de IES Maestre Calatrava!</h1>
-        <p class="lead">Sigue los partidos y noticias de tu equipo favorito</p>
-        <a href="#partidos" class="btn btn-primary btn-lg mt-3">Accede rápido</a>
-    </div>
+        <!-- Competición 2 -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm border-0">
+            <img src="assetss/baloncesto.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
+            <div class="card-body">
+              <h5 class="card-title text-primary fw-bold">Liga de Baloncesto</h5>
+              <p class="card-text">Participa en la competición más reñida. Equipos femeninos compitiendo por ser el mejor centro.</p>
+            </div>
+            <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
+              <a href="#" class="btn btn-primary btn-sm">Clasificación</a>
+              <a href="#" class="btn btn-outline-primary btn-sm">Más info</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Competición 3 -->
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm border-0">
+            <img src="assetss/volleyball.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
+            <div class="card-body">
+              <h5 class="card-title text-primary fw-bold">Torneo de voleibol</h5>
+              <p class="card-text">El torneo más emocionante del año. Equipos mixtos compitiendo por la copa de invierno.</p>
+            </div>
+            <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
+              <a href="#" class="btn btn-primary btn-sm">Ver resultados</a>
+              <a href="#" class="btn btn-outline-primary btn-sm">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+ </main>
 
-
-  <footer class="bg-dark text-white mt-5 pt-4 pb-4">
+  <footer class="bg-light text-black mt-5 pt-4 pb-4">
   <div class="container">
     <div class="row">
 
       <!-- Correo de contacto -->
       <div class="col-md-4 mb-3">
         <h5>Contacto</h5>
-        <p>Email: <a href="mailto:contacto@centro.com" class="text-white">contacto@centro.com</a></p>
+        <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-black">laliga@iesmaestrecalatrava.com</a></p>
         <p>Teléfono: +34 123 456 789</p>
       </div>
 
       <!-- Textos legales -->
       <div class="col-md-4 mb-3">
         <h5>Legal</h5>
-        <a href="#" class="text-white d-block">Aviso de Privacidad</a>
-        <a href="#" class="text-white d-block">Política de Cookies</a>
-        <a href="#" class="text-white d-block">Términos y Condiciones</a>
+        <a href="#" class="text-black d-block">Aviso de Privacidad</a>
+        <a href="#" class="text-black d-block">Política de Cookies</a>
+        <a href="#" class="text-black d-block">Términos y Condiciones</a>
       </div>
 
       <!-- Redes sociales -->
@@ -120,5 +191,7 @@
   </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <!-- My JS -->
+     <script src="js/main.js"></script>
   </body>
 </html>
