--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- My CSS style -->
+     <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>La Liga</title>
@@ -27,7 +29,7 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Equipos</a>
+                    <a class="nav-link" href="equipos.html">Equipos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Resultados</a>
@@ -51,7 +53,8 @@
     </nav>
   </header>
 
-  <!-- Carousel noticias -->
+  <!-- ================================ -->
+  <!-- Carousel -->
   <main>
     <div class="carousel-container">
   <!--  <h1 class="text-center mb-4 fw-bold">Todas las noticias del día</h1> -->
@@ -62,24 +65,21 @@
           <button type="button" data-bs-target="#newsCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" role="button" data-bs-toggle="modal" data-bs-target="#modalNew1">
           <img src="assetss/volleyball.jpg" class="d-block w-100" style="max-height: 500px;" alt="Noticas sobre voleibol">
           <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
             <h5 class="fw-bold">Torneo de voleibol escolar</h5>
             <p>Las semifinales prometen grandes emociones este fin de semana.</p>
-            <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="modalVoleibol">
-              Saber más
-            </button>
           </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" role="button" data-bs-toggle="modal" data-bs-target="#modalNew2">
           <img src="assetss/baloncesto.jpg" class="d-block w-100" style="max-height: 500px;" alt="Noticias sobre baloncesto">
           <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
             <h5 class="fw-bold">Próximas clasificaciones para los equipos de baloncesto</h5>
             <p>Los días 21 y 22 de noviembre se comparten el listado con las clasificaciones para el año 2026.</p>
           </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" role="button" data-bs-toggle="modal" data-bs-target="#modalNew3">
           <img src="assetss/futbol.jpg" class="d-block w-100" style="max-height: 500px;" alt="Notiicias sobre futbol">
           <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
             <h5 class="fw-bold">Torneos de futbol juvenil</h5>
@@ -87,6 +87,7 @@
           </div>
           </div>
       </div>
+      <!-- Carousel buttons -->
       <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -97,8 +98,55 @@
       </button>
     </div>
   </div>
- 
-    <!-- Competiciones -->
+  <!-- News modals -->
+    <!-- Modal 1 -->
+    <div class="modal fade" id="modalNew1" tabindex="-1" aria-labelledby="modalNew1Label" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-primary text-white">
+            <h5 class="modal-title" id="modalNew1Label">Torneo de Voleibol Escolar</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+          </div>
+          <div class="modal-body">
+            <img src="assetss/volleyball.jpg" class="img-fluid rounded mb-3" alt="Torneo de voleibol">
+            <p>El torneo de voleibol escolar entra en su recta final. Este fin de semana se disputarán las semifinales con los cuatro mejores equipos del campeonato. Los partidos tendrán lugar en el polideportivo municipal a partir de las 10:00 de la mañana.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+     <!-- Modal 2 -->
+    <div class="modal fade" id="modalNew2" tabindex="-1" aria-labelledby="modalNew2Label" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-primary text-white">
+            <h5 class="modal-title" id="modalNew2Label">Clasificaciones de Baloncesto 2026</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+          </div>
+          <div class="modal-body">
+            <img src="assetss/baloncesto.jpg" class="img-fluid rounded mb-3" alt="Torneo de baloncesto">
+            <p>La liga de baloncesto escolar avanza con un gran nivel de competición. Las nuevas clasificaciones oficiales se publicarán el 21 y 22 de noviembre, con actualizaciones en tiempo real de resultados y estadísticas.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+     <!-- Modal 3 -->
+    <div class="modal fade" id="modalNew3" tabindex="-1" aria-labelledby="modalNew3Label" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-primary text-white">
+            <h5 class="modal-title" id="modalNew3Label">Torneo de futbol Escolar</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+          </div>
+          <div class="modal-body">
+            <img src="assetss/football-club.avif" class="img-fluid rounded mb-3" alt="Torneo de futbol">
+            <p>Los torneos de fútbol juvenil comenzarán el primer fin de semana de enero de 2026. Los encuentros se desarrollarán en diferentes centros educativos y polideportivos de la ciudad. La participación está abierta a todas las escuelas de categoría sub-12</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- ================================ -->
+    <!-- Competitions -->
     <section id="competitions" class="py-5 bg-light">
       <div class="container">
         <div class="text-center mb-5">
@@ -107,7 +155,7 @@
         </div>
 
         <div class="row g-4">
-        <!-- Competición 1 -->
+        <!-- Competition 1 -->
         <div class="col-md-4">
           <div class="card h-100 shadow-sm border-0">
             <img src="assetss/futbol.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Fútbol">
@@ -123,7 +171,7 @@
           </div>
         </div>
 
-        <!-- Competición 2 -->
+        <!-- Competition 2 -->
         <div class="col-md-4">
           <div class="card h-100 shadow-sm border-0">
             <img src="assetss/baloncesto.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
@@ -138,7 +186,7 @@
           </div>
         </div>
 
-        <!-- Competición 3 -->
+        <!-- Competition 3 -->
         <div class="col-md-4">
           <div class="card h-100 shadow-sm border-0">
             <img src="assetss/volleyball.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
@@ -156,33 +204,31 @@
     </section>
  </main>
 
+ <!-- ================================ -->
+  <!-- Footer -->
   <footer class="bg-light text-black mt-5 pt-4 pb-4">
   <div class="container">
     <div class="row">
-
-      <!-- Correo de contacto -->
+      <!-- Email -->
       <div class="col-md-4 mb-3">
         <h5>Contacto</h5>
         <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-black">laliga@iesmaestrecalatrava.com</a></p>
         <p>Teléfono: +34 123 456 789</p>
       </div>
-
-      <!-- Textos legales -->
+      <!-- Legal texts -->
       <div class="col-md-4 mb-3">
         <h5>Legal</h5>
         <a href="#" class="text-black d-block">Aviso de Privacidad</a>
         <a href="#" class="text-black d-block">Política de Cookies</a>
         <a href="#" class="text-black d-block">Términos y Condiciones</a>
       </div>
-
-      <!-- Redes sociales -->
+      <!-- Social media -->
       <div class="col-md-4 mb-3">
         <h5>Redes Sociales</h5>
         <a href="https://www.instagram.com"><img src="assetss/instagram.png" width="40"></a>
         <a href="https://www.facebook.com"><img src="assetss/facebook.png" width="40"></a>
         <a href="https://www.x.com"><img src="assetss/X_icon.png" width="40"></a>
       </div>
-
     </div>
     <div class="text-center mt-6">
       <small>&copy; 2025 Centro Educativo. Todos los derechos reservados.</small>
