Add results section

--- a/equipos.html
+++ b/equipos.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="equipos.html">Equipos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resultados</a>
+                    <a class="nav-link" href="resultados.html">Resultados</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Clasificaciones</a>
@@ -129,18 +129,18 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 team-card" data-competition="basketOption" data-team="baskonia">
+
+            <!-- Volleyball -->
+            <div class="col-md-3 team-card" data-competition="volleyOption" data-team="baskonia">
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Baskonia</h2>
                         <img src="assetss/vitoria.png" class="card-img-top" alt="Equipo Baskonia Vitoria">
-                        <p class="card-text team-category">Baloncesto</p>
+                        <p class="card-text team-category">Voleibol</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
                 </div>
             </div>
-
-            <!-- Volleyball -->
             <div class="col-md-3 team-card" data-competition="volleyOption" data-team="titanes">
                 <div class="card bg-light">
                     <div class="card-body">
