--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="equipos.html">Equipos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resultados</a>
+                    <a class="nav-link" href="resultados.html">Resultados</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Clasificaciones</a>
