Add classifications section

--- a/clasificaciones.html
+++ b/clasificaciones.html
@@ -63,85 +63,89 @@
                 <option value="volleyOption">Voleibol</option>
             </select>
         </div>
-        <div class="results-list">     
-            <!-- Football -->
-            <div class="competition-result footballOption">
-            <h4>Fútbol - Jornada 1</h4>
+
+        <!-- Clasificación Fútbol -->
+        <div class="classification-result footballOption mb-5">
+            <h4>Clasificación Fútbol</h4>
             <table class="table table-bordered">
-                <thead class="table-light">
+                <thead class="table-primary text-center">
+                    <tr>
+                        <th>Posición</th>
+                        <th>Equipo</th>
+                        <th>Partidos Jugados</th>
+                        <th>Victorias</th>
+                        <th>Empates</th>
+                        <th>Derrotas</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr>
+                        <td>1</td><td>Barcelona</td><td>14</td><td>10</td><td>2</td><td>2</td>
+                    </tr>
+                    <tr>
+                        <td>2</td><td>Athletic Club</td><td>14</td><td>7</td><td>4</td><td>3</td>
+                    </tr>
+                    <tr>
+                        <td>3</td><td>Sevilla</td><td>14</td><td>8</td><td>4</td><td>2</td>
+                    </tr>
+                    <tr>
+                        <td>4</td><td>Valencia</td><td>14</td><td>7</td><td>4</td><td>3</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Clasificación Baloncesto -->
+        <div class="classification-result basketOption mb-5">
+            <h4>Clasificación Baloncesto</h4>
+            <table class="table table-bordered">
+                <thead class="table-primary text-center">
                 <tr>
-                    <th>Local</th>
-                    <th>Visitante</th>
-                    <th>Resultado</th>
+                    <th>Posición</th>
+                    <th>Equipo</th>
+                    <th>Partidos Jugados</th>
+                    <th>Victorias</th>
+                    <th>Empates</th>
+                    <th>Derrotas</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="text-center">
                 <tr>
-                    <td>Barcelona</td>
-                    <td>Valencia</td>
-                    <td>2 - 1</td>
+                    <td>1</td><td>Toledo</td><td>10</td><td>2</td><td>6</td><td>2</td>
                 </tr>
                 <tr>
-                    <td>Athletic Club</td>
-                    <td>Sevilla</td>
-                    <td>0 - 0</td>
+                    <td>2</td><td>Baskonia</td><td>8</td><td>4</td><td>2</td><td>2</td>
                 </tr>
                 <tr>
-                    <td>Valencia</td>
-                    <td>Barcelona</td>
-                    <td>4 - 0</td>
+                    <td>3</td><td>Charlotte Hornets</td><td>6</td><td>6</td><td>0</td><td>0</td>
                 </tr>
                 </tbody>
             </table>
-            </div>
+        </div>
 
-            <!-- Basket -->
-            <div class="competition-result basketOption">
-            <h4>Baloncesto - Jornada 1</h4>
+        <!-- Clasificación Voleibol -->
+        <div class="classification-result volleyOption mb-5">
+            <h4>Clasificación Voleibol</h4>
             <table class="table table-bordered">
-                <thead class="table-light">
+                <thead class="table-primary text-center">
                 <tr>
-                    <th>Local</th>
-                    <th>Visitante</th>
-                    <th>Resultado</th>
+                    <th>Posición</th>
+                    <th>Equipo</th>
+                    <th>Partidos Jugados</th>
+                    <th>Victorias</th>
+                    <th>Empates</th>
+                    <th>Derrotas</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="text-center">
                 <tr>
-                    <td>Toledo</td>
-                    <td>Charlotte Hornets</td>
-                    <td>89 - 92</td>
+                    <td>1</td><td>Los Titanes</td><td>10</td><td>8</td><td>2</td><td>4</td>
                 </tr>
                 <tr>
-                    <td>Baskonia</td>
-                    <td>Valencia Basket</td>
-                    <td>78 - 80</td>
-                </tr>
-                </tbody>
-            </table>
-            </div>
-
-            <!-- Volleyball -->
-            <div class="competition-result volleyOption">
-            <h4>Voleibol - Jornada 1</h4>
-            <table class="table table-bordered">
-                <thead class="table-light">
-                <tr>
-                    <th>Local</th>
-                    <th>Visitante</th>
-                    <th>Resultado</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>Los Titanes</td>
-                    <td>Baskonia</td>
-                    <td>3 - 1</td>
+                    <td>2</td><td>Volleyball City</td><td>10</td><td>7</td><td>3</td><td>1</td>
                 </tr>
                 <tr>
-                    <td>Baskonia</td>
-                    <td>Los Titanes</td>
-                    <td>2 - 3</td>
+                    <td>3</td><td>Spike Team</td><td>10</td><td>6</td><td>4</td><td>8</td>
                 </tr>
                 </tbody>
             </table>
