--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="resultados.html">Resultados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Clasificaciones</a>
+                    <a class="nav-link" href="clasificaciones.html">Clasificaciones</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Jugadores</a>
