Add players section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="clasificaciones.html">Clasificaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Jugadores</a>
+                    <a class="nav-link" href="jugadores.html">Jugadores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Árbitros</a>
@@ -165,7 +165,7 @@
               <p class="text-muted small">Próxima jornada: 15 de noviembre</p>
             </div>
             <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
-              <a href="#" class="btn btn-primary btn-sm">Ver resultados</a>
+              <a href="resultados.html" class="btn btn-primary btn-sm">Ver resultados</a>
               <a href="#" class="btn btn-outline-primary btn-sm">Inscribirse</a>
             </div>
           </div>
@@ -180,8 +180,8 @@
               <p class="card-text">Participa en la competición más reñida. Equipos femeninos compitiendo por ser el mejor centro.</p>
             </div>
             <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
-              <a href="#" class="btn btn-primary btn-sm">Clasificación</a>
-              <a href="#" class="btn btn-outline-primary btn-sm">Más info</a>
+              <a href="clasificaciones.html" class="btn btn-primary btn-sm">Clasificación</a>
+              <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#modalNew2"> Más info</button>
             </div>
           </div>
         </div>
@@ -195,7 +195,7 @@
               <p class="card-text">El torneo más emocionante del año. Equipos mixtos compitiendo por la copa de invierno.</p>
             </div>
             <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
-              <a href="#" class="btn btn-primary btn-sm">Ver resultados</a>
+              <a href="resultados.html" class="btn btn-primary btn-sm">Ver resultados</a>
               <a href="#" class="btn btn-outline-primary btn-sm">Inscribirse</a>
             </div>
           </div>
