--- a/resultados.html
+++ b/resultados.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="clasificaciones.html">Clasificaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Jugadores</a>
+                    <a class="nav-link" href="jugadores.html">Jugadores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Árbitros</a>
@@ -68,7 +68,7 @@
             <div class="competition-result footballOption">
             <h4>Fútbol - Jornada 1</h4>
             <table class="table table-bordered">
-                <thead class="table-light">
+                <thead class="table-primary text-center">
                 <tr>
                     <th>Local</th>
                     <th>Visitante</th>
@@ -77,19 +77,13 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>Barcelona</td>
-                    <td>Valencia</td>
-                    <td>2 - 1</td>
+                    <td>Barcelona</td><td>Valencia</td><td>2 - 1</td>
                 </tr>
                 <tr>
-                    <td>Athletic Club</td>
-                    <td>Sevilla</td>
-                    <td>0 - 0</td>
+                    <td>Athletic Club</td><td>Sevilla</td><td>0 - 0</td>
                 </tr>
                 <tr>
-                    <td>Valencia</td>
-                    <td>Barcelona</td>
-                    <td>4 - 0</td>
+                    <td>Valencia</td><td>Barcelona</td><td>4 - 0</td>
                 </tr>
                 </tbody>
             </table>
@@ -99,7 +93,7 @@
             <div class="competition-result basketOption">
             <h4>Baloncesto - Jornada 1</h4>
             <table class="table table-bordered">
-                <thead class="table-light">
+                <thead class="table-primary text-center">
                 <tr>
                     <th>Local</th>
                     <th>Visitante</th>
@@ -108,14 +102,10 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>Toledo</td>
-                    <td>Charlotte Hornets</td>
-                    <td>89 - 92</td>
+                    <td>Toledo</td><td>Charlotte Hornets</td><td>89 - 92</td>
                 </tr>
                 <tr>
-                    <td>Baskonia</td>
-                    <td>Valencia Basket</td>
-                    <td>78 - 80</td>
+                    <td>Baskonia</td><td>Valencia Basket</td><td>78 - 80</td>
                 </tr>
                 </tbody>
             </table>
@@ -125,7 +115,7 @@
             <div class="competition-result volleyOption">
             <h4>Voleibol - Jornada 1</h4>
             <table class="table table-bordered">
-                <thead class="table-light">
+                <thead class="table-primary text-center">
                 <tr>
                     <th>Local</th>
                     <th>Visitante</th>
@@ -134,14 +124,10 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>Los Titanes</td>
-                    <td>Baskonia</td>
-                    <td>3 - 1</td>
+                    <td>Los Titanes</td><td>Baskonia</td><td>3 - 1</td>
                 </tr>
                 <tr>
-                    <td>Baskonia</td>
-                    <td>Los Titanes</td>
-                    <td>2 - 3</td>
+                    <td>Baskonia</td><td>Los Titanes</td><td>2 - 3</td>
                 </tr>
                 </tbody>
             </table>
