--- a/equipos.html
+++ b/equipos.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="clasificaciones.html">Clasificaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Jugadores</a>
+                    <a class="nav-link" href="jugadores.html">Jugadores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Árbitros</a>
