--- a/equipos.html
+++ b/equipos.html
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="jugadores.html">Jugadores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Árbitros</a>
+                    <a class="nav-link" href="arbitros.html">Árbitros</a>
                 </li>
             </ul>
             <!-- Contact btn -->
