--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
             <!-- Contact btn -->
             <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                <button class="btn btn-primary">Contacto</button>
+                <a href="contacto.html" class="btn btn-primary">Contacto</a>
             </div>
             </div>
         </div>
