Remove button detail in ref section

--- a/arbitros.html
+++ b/arbitros.html
@@ -77,56 +77,55 @@
       <!-- Lista de jugadores -->
       <div id="refList" class="row g-4">
         <!-- Fútbol -->
-        <div class="col-md-4 ref-card footballOption" data-ref="juanjo">
+        <div class="col-md-4 ref-card footballOption"
+              data-bs-toggle="modal"
+              data-bs-target="#refModal"
+              data-name="Juanjo Soto"
+              data-sport="Fútbol"
+              data-stats="12"
+              data-exp="15 años"
+              data-ref="juanjo">
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Juanjo Soto</h2>
               <img src="assetss/juanjo.png" class="card-img-top" alt="Árbitro de Fútbol, Juanjo Soto">
-              <button class="btn btn-primary btn-sm view-ref-btn"
-                      data-bs-toggle="modal"
-                      data-bs-target="#refModal"
-                      data-name="Juanjo Soto"
-                      data-sport="Fútbol"
-                      data-stats="12"
-                      data-exp="15 años">Ver detalles</button>
             </div>
           </div>
         </div>
 
         <!-- Basket -->
-        <div class="col-md-4 ref-card basketOption" data-ref="ricardo">
+        <div class="col-md-4 ref-card basketOption"
+             data-bs-toggle="modal"
+             data-bs-target="#refModal"
+             data-name="Ricardo Nuñez"
+             data-sport="Baloncesto"
+             data-stats="4"
+             data-exp="2 años" 
+             data-ref="ricardo">
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Ricardo Nuñez</h2>
               <img src="assetss/ricardo.png" class="card-img-top" alt="Árbitro de baloncesto, Ricardo Nuñez">
-              <button class="btn btn-primary btn-sm view-ref-btn"
-                      data-bs-toggle="modal"
-                      data-bs-target="#refModal"
-                      data-name="Ricardo Nuñez"
-                      data-sport="Baloncesto"
-                      data-stats="4"
-                      data-exp="2 años">Ver detalles</button>
             </div>
           </div>
         </div>
 
         <!-- Voleibol -->
-        <div class="col-md-4 ref-card volleyOption" data-ref="publicarán">
+        <div class="col-md-4 ref-card volleyOption"
+             data-bs-toggle="modal"
+             data-bs-target="#refModal"
+             data-name="Pilar Calvo"
+             data-sport="Voleibol"
+             data-stats="6"
+             data-exp="10 años" 
+             data-ref="publicarán">
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Pilar Calvo</h2>
               <img src="assetss/pilar.jpg" class="card-img-top" alt="Árbitro de voleibol, Pilar Calvo">
-              <button class="btn btn-primary btn-sm view-ref-btn"
-                      data-bs-toggle="modal"
-                      data-bs-target="#refModal"
-                      data-name="Pilar Calvo"
-                      data-sport="Voleibol"
-                      data-stats="6"
-                      data-exp="10 años">Ver detalles</button>
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </main>
