--- a/arbitros.html
+++ b/arbitros.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
-                <img src="assetss/la-liga.png" width="200"/>
+                <img src="assetss/img/logo.png"/>
             </a>
             <!-- Responsive button collapsable -->
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="jugadores.html">Jugadores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="arbitros.html">Árbitros</a>
+                    <a class="nav-link active" href="arbitros.html">Árbitros</a>
                 </li>
             </ul>
             <!-- Contact btn -->
@@ -88,7 +88,7 @@
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Juanjo Soto</h2>
-              <img src="assetss/juanjo.png" class="card-img-top" alt="Árbitro de Fútbol, Juanjo Soto">
+              <img src="assetss/img/juanjo.png" class="card-img-top" alt="Árbitro de Fútbol, Juanjo Soto">
             </div>
           </div>
         </div>
@@ -105,7 +105,7 @@
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Ricardo Nuñez</h2>
-              <img src="assetss/ricardo.png" class="card-img-top" alt="Árbitro de baloncesto, Ricardo Nuñez">
+              <img src="assetss/img/ricardo.png" class="card-img-top" alt="Árbitro de baloncesto, Ricardo Nuñez">
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Pilar Calvo</h2>
-              <img src="assetss/pilar.jpg" class="card-img-top" alt="Árbitro de voleibol, Pilar Calvo">
+              <img src="assetss/img/pilar.png" class="card-img-top" alt="Árbitro de voleibol, Pilar Calvo">
             </div>
           </div>
         </div>
@@ -168,19 +168,19 @@
       <!-- Social media -->
       <div class="col-md-4 mb-3">
         <h5>Redes Sociales</h5>
-        <a href="https://www.instagram.com"><img src="assetss/instagram.png" width="40"></a>
-        <a href="https://www.facebook.com"><img src="assetss/facebook.png" width="40"></a>
-        <a href="https://www.x.com"><img src="assetss/X_icon.png" width="40"></a>
+        <a href="https://www.instagram.com"><img src="assetss/img/instagram.png" width="40"></a>
+        <a href="https://www.facebook.com"><img src="assetss/img/facebook.png" width="40"></a>
+        <a href="https://www.x.com"><img src="assetss/img/X_icon.png" width="40"></a>
       </div>
     </div>
     <div class="text-center mt-6">
-      <small>&copy; 2025 Centro Educativo. Todos los derechos reservados.</small>
+      <small>&copy; 2025 Deportes - IES Maestre Calatrava. Todos los derechos reservados.</small>
     </div>
   </div>
   </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!-- My JS -->
-     <script src="js/main.js"></script>
+     <script src="bootstrap/js/main.js"></script>
   </body>
 </html>
