--- a/equipos.html
+++ b/equipos.html
@@ -10,14 +10,14 @@
     <title>La Liga</title>
 </head>
 <body>
-  <div class="all-body-content bg-primary">
+  <div class="all-body-content">
   <!-- Header -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
-                <img src="assetss/la-liga.png" width="200"/>
+                <img src="assetss/img/logo.png"/>
             </a>
             <!-- Responsive button collapsable -->
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="equipos.html">Equipos</a>
+                    <a class="nav-link active" href="equipos.html">Equipos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="resultados.html">Resultados</a>
@@ -71,7 +71,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Barcelona</h2>
-                        <img src="assetss/barcelona.png" class="card-img-top" alt="Equipo Barcelona">
+                        <img src="assetss/img/barcelona.png" class="card-img-top" alt="Equipo Barcelona">
                         <p class="card-text team-category">Fútbol</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
@@ -81,7 +81,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Atlethic Club</h2>
-                        <img src="assetss/athletic.png" class="card-img-top" alt="Equipo athletic Club">
+                        <img src="assetss/img/athletic.png" class="card-img-top" alt="Equipo athletic Club">
                         <p class="card-text team-category">Fútbol</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
@@ -91,7 +91,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Valencia</h2>
-                        <img src="assetss/valencia.png" class="card-img-top" alt="Equipo Valencia">
+                        <img src="assetss/img/valencia.png" class="card-img-top" alt="Equipo Valencia">
                         <p class="card-text team-category">Fútbol</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
@@ -101,7 +101,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Sevilla</h2>
-                        <img src="assetss/sevilla.png" class="card-img-top" alt="Equipo Sevilla">
+                        <img src="assetss/img/sevilla.png" class="card-img-top" alt="Equipo Sevilla">
                         <p class="card-text team-category">Fútbol</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
@@ -113,7 +113,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Toledo</h2>
-                        <img src="assetss/toledo.png" class="card-img-top" alt="Equipo Toledo Baloncesto">
+                        <img src="assetss/img/toledo.png" class="card-img-top" alt="Equipo Toledo Baloncesto">
                         <p class="card-text team-category">Baloncesto</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
@@ -123,19 +123,18 @@
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Charlotte Hornest</h2>
-                        <img src="assetss/charlotte-hornest.webp" class="card-img-top" alt="Equipo charlotte hornest">
+                        <img src="assetss/img/charlotte-hornest.webp" class="card-img-top" alt="Equipo charlotte hornest">
                         <p class="card-text team-category">Baloncesto</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
                 </div>
             </div>
-
             <!-- Volleyball -->
             <div class="col-md-3 team-card" data-competition="volleyOption" data-team="baskonia">
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Baskonia</h2>
-                        <img src="assetss/vitoria.png" class="card-img-top" alt="Equipo Baskonia Vitoria">
+                        <img src="assetss/img/vitoria.png" class="card-img-top" alt="Equipo Baskonia Vitoria">
                         <p class="card-text team-category">Voleibol</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
@@ -145,7 +144,7 @@
                 <div class="card bg-light">
                     <div class="card-body">
                         <h2 class="card-title fw-bold">Los titanes</h2>
-                        <img src="assetss/volleyball-team.svg" class="card-img-top" alt="Equipo los titanes">
+                        <img src="assetss/img/volleyball-team.svg" class="card-img-top" alt="Equipo los titanes">
                         <p class="card-text team-category">Voleibol</p>
                         <button class="btn btn-primary btn-sm more-info-btn">Ver detalles del equipo</button>
                     </div>
@@ -188,20 +187,20 @@
       <!-- Social media -->
       <div class="col-md-4 mb-3">
         <h5>Redes Sociales</h5>
-        <a href="https://www.instagram.com"><img src="assetss/instagram.png" width="40"></a>
-        <a href="https://www.facebook.com"><img src="assetss/facebook.png" width="40"></a>
-        <a href="https://www.x.com"><img src="assetss/X_icon.png" width="40"></a>
+        <a href="https://www.instagram.com"><img src="assetss/img/instagram.png" width="40"></a>
+        <a href="https://www.facebook.com"><img src="assetss/img/facebook.png" width="40"></a>
+        <a href="https://www.x.com"><img src="assetss/img/X_icon.png" width="40"></a>
       </div>
     </div>
     <div class="text-center mt-6">
-      <small>&copy; 2025 Centro Educativo. Todos los derechos reservados.</small>
+      <small>&copy; 2025 Deportes - IES Maestre Calatrava. Todos los derechos reservados.</small>
     </div>
   </div>
   </footer>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <!-- My JS -->
-<script src="js/main.js"></script>
+<script src="bootstrap/js/main.js"></script>
 
 </div>  
 </body>
