--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
-                <img src="assetss/la-liga.png" width="200"/>
+                <img src="assetss/img/logo.png"/>
             </a>
             <!-- Responsive button collapsable -->
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav col-lg-6 justify-content-lg-center">
               <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a class="nav-link active" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="equipos.html">Equipos</a>
@@ -54,9 +54,9 @@
   </header>
 
   <!-- ================================ -->
-  <!-- Carousel -->
   <main>
-    <div class="carousel-container">
+  <!-- Carousel -->
+  <div class="carousel-container">
   <!--  <h1 class="text-center mb-4 fw-bold">Todas las noticias del día</h1> -->
     <div id="newsCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -66,21 +66,21 @@
       </div>
       <div class="carousel-inner">
           <div class="carousel-item active" role="button" data-bs-toggle="modal" data-bs-target="#modalNew1">
-          <img src="assetss/volleyball.jpg" class="d-block w-100" style="max-height: 500px;" alt="Noticas sobre voleibol">
+          <img src="assetss/img/voleibol-carousel.png" class="d-block w-100" alt="Noticas sobre voleibol">
           <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
             <h5 class="fw-bold">Torneo de voleibol escolar</h5>
             <p>Las semifinales prometen grandes emociones este fin de semana.</p>
           </div>
           </div>
           <div class="carousel-item" role="button" data-bs-toggle="modal" data-bs-target="#modalNew2">
-          <img src="assetss/baloncesto.jpg" class="d-block w-100" style="max-height: 500px;" alt="Noticias sobre baloncesto">
+          <img src="assetss/img/baloncesto-carousel.png" class="d-block w-100" alt="Noticias sobre baloncesto">
           <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
             <h5 class="fw-bold">Próximas clasificaciones para los equipos de baloncesto</h5>
             <p>Los días 21 y 22 de noviembre se comparten el listado con las clasificaciones para el año 2026.</p>
           </div>
           </div>
           <div class="carousel-item" role="button" data-bs-toggle="modal" data-bs-target="#modalNew3">
-          <img src="assetss/futbol.jpg" class="d-block w-100" style="max-height: 500px;" alt="Notiicias sobre futbol">
+          <img src="assetss/img/futbol-carousel.png" class="d-block w-100" alt="Notiicias sobre futbol">
           <div class="carousel-caption text-white bg-dark bg-opacity-50 rounded p-3 d-none d-md-block">
             <h5 class="fw-bold">Torneos de futbol juvenil</h5>
             <p>Todos los fines de semana del año 2026 comienzan los torneos juveniles de futbol.</p>
@@ -108,7 +108,7 @@
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
           </div>
           <div class="modal-body">
-            <img src="assetss/volleyball.jpg" class="img-fluid rounded mb-3" alt="Torneo de voleibol">
+            <img src="assetss/img/volleyball.jpg" class="img-fluid rounded mb-3" alt="Torneo de voleibol">
             <p>El torneo de voleibol escolar entra en su recta final. Este fin de semana se disputarán las semifinales con los cuatro mejores equipos del campeonato. Los partidos tendrán lugar en el polideportivo municipal a partir de las 10:00 de la mañana.</p>
           </div>
         </div>
@@ -123,7 +123,7 @@
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
           </div>
           <div class="modal-body">
-            <img src="assetss/baloncesto.jpg" class="img-fluid rounded mb-3" alt="Torneo de baloncesto">
+            <img src="assetss/img/baloncesto.jpg" class="img-fluid rounded mb-3" alt="Torneo de baloncesto">
             <p>La liga de baloncesto escolar avanza con un gran nivel de competición. Las nuevas clasificaciones oficiales se publicarán el 21 y 22 de noviembre, con actualizaciones en tiempo real de resultados y estadísticas.</p>
           </div>
         </div>
@@ -138,16 +138,33 @@
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
           </div>
           <div class="modal-body">
-            <img src="assetss/football-club.avif" class="img-fluid rounded mb-3" alt="Torneo de futbol">
+            <img src="assetss/img/football-club.avif" class="img-fluid rounded mb-3" alt="Torneo de futbol">
             <p>Los torneos de fútbol juvenil comenzarán el primer fin de semana de enero de 2026. Los encuentros se desarrollarán en diferentes centros educativos y polideportivos de la ciudad. La participación está abierta a todas las escuelas de categoría sub-12</p>
           </div>
         </div>
       </div>
     </div>
-
+<!-- ================================ -->
+  <!-- Hero -->
+<section id="hero" class="py-5">
+  <div class="container col-xxl-8 px-4 py-5 bg-light shadow-lg rounded">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-6 col-lg-6">
+        <img src="assetss/img/logo.png" class="d-block mx-lg-auto img-fluid" width="700" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold lh-1 mb-3">Apostamos por el deporte</h1>
+        <p class="lead">La asociación de padres del centro, cree que el deporte es lo prioritario para el desarrollo físico de cada niño. Es por ello que se ha construido el proyecto llamado: "Deporte".<br><br> ¡No te lo pienses, aún estás a tiempo de participar!</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="#" type="button" class="btn btn-primary btn-lg px-4">Inscribirse</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   <!-- ================================ -->
     <!-- Competitions -->
-    <section id="competitions" class="py-5 bg-light">
+    <section id="competitions" class="py-5">
       <div class="container">
         <div class="text-center mb-5">
           <h2 class="fw-bold">Competiciones actuales</h1>
@@ -158,7 +175,7 @@
         <!-- Competition 1 -->
         <div class="col-md-4">
           <div class="card h-100 shadow-sm border-0">
-            <img src="assetss/futbol.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Fútbol">
+            <img src="assetss/img/inscribete-ahora.png" class="card-img-top" style="max-height: 180px;" alt="Liga de Fútbol">
             <div class="card-body">
               <h5 class="card-title text-primary fw-bold">Liga de Fútbol Escolar</h5>
               <p class="card-text">12 equipos compiten por el trofeo anual. La temporada se extiende de octubre a marzo.</p>
@@ -174,7 +191,7 @@
         <!-- Competition 2 -->
         <div class="col-md-4">
           <div class="card h-100 shadow-sm border-0">
-            <img src="assetss/baloncesto.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
+            <img src="assetss/img/baloncesto-new.png" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
             <div class="card-body">
               <h5 class="card-title text-primary fw-bold">Liga de Baloncesto</h5>
               <p class="card-text">Participa en la competición más reñida. Equipos femeninos compitiendo por ser el mejor centro.</p>
@@ -189,7 +206,7 @@
         <!-- Competition 3 -->
         <div class="col-md-4">
           <div class="card h-100 shadow-sm border-0">
-            <img src="assetss/volleyball.jpg" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
+            <img src="assetss/img/volleyball-team.svg" class="card-img-top" style="max-height: 180px;" alt="Liga de Baloncesto">
             <div class="card-body">
               <h5 class="card-title text-primary fw-bold">Torneo de voleibol</h5>
               <p class="card-text">El torneo más emocionante del año. Equipos mixtos compitiendo por la copa de invierno.</p>
@@ -203,10 +220,9 @@
       </div>
     </section>
  </main>
-
  <!-- ================================ -->
   <!-- Footer -->
-  <footer class="bg-light text-black mt-5 pt-4 pb-4">
+  <footer class="footer-content text-black mt-5 pt-4 pb-4 bg-light">
   <div class="container">
     <div class="row">
       <!-- Email -->
@@ -225,19 +241,20 @@
       <!-- Social media -->
       <div class="col-md-4 mb-3">
         <h5>Redes Sociales</h5>
-        <a href="https://www.instagram.com"><img src="assetss/instagram.png" width="40"></a>
-        <a href="https://www.facebook.com"><img src="assetss/facebook.png" width="40"></a>
-        <a href="https://www.x.com"><img src="assetss/X_icon.png" width="40"></a>
+        <a href="https://www.instagram.com"><img src="assetss/img/instagram.png" width="40"></a>
+        <a href="https://www.facebook.com"><img src="assetss/img/facebook.png" width="40"></a>
+        <a href="https://www.x.com"><img src="assetss/img/X_icon.png" width="40"></a>
       </div>
     </div>
     <div class="text-center mt-6">
-      <small>&copy; 2025 Centro Educativo. Todos los derechos reservados.</small>
+      <small>&copy; 2025 Deportes - IES Maestre Calatrava. Todos los derechos reservados.</small>
     </div>
   </div>
   </footer>
+   <!-- ================================ -->
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!-- My JS -->
-     <script src="js/main.js"></script>
+     <script src="bootstrap/js/main.js"></script>
   </body>
 </html>
