--- a/jugadores.html
+++ b/jugadores.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
-                <img src="assetss/la-liga.png" width="200"/>
+                <img src="assetss/img/logo.png"/>
             </a>
             <!-- Responsive button collapsable -->
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="clasificaciones.html">Clasificaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="jugadores.html">Jugadores</a>
+                    <a class="nav-link active" href="jugadores.html">Jugadores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="arbitros.html">Árbitros</a>
@@ -81,7 +81,7 @@
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Elena Suarez</h2>
-              <img src="assetss/elena.webp" class="card-img-top" alt="Jugadora Elena de Barcelona">
+              <img src="assetss/img/elena.webp" class="card-img-top" alt="Jugadora Elena de Barcelona">
               <h3>Barcelona</h3>
               <p class="card-text">Fútbol</p>
               <button class="btn btn-primary btn-sm view-player-btn"
@@ -99,7 +99,7 @@
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Carlos Gonzalez</h2>
-              <img src="assetss/carlos.webp" class="card-img-top" alt="Jugador Carlos de Valencia">
+              <img src="assetss/img/carlos.webp" class="card-img-top" alt="Jugador Carlos de Valencia">
               <h3>Valencia</h3>
               <p class="card-text">Fútbol</p>
               <button class="btn btn-primary btn-sm view-player-btn"
@@ -118,7 +118,7 @@
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Manuel Sevilla</h2>
-              <img src="assetss/manuel.png" class="card-img-top" alt="Jugador Manuel de Toledo Baloncesto">
+              <img src="assetss/img/manuel.png" class="card-img-top" alt="Jugador Manuel de Toledo Baloncesto">
               <h3>Toledo Baloncesto</h3>
               <p class="card-text">Baloncesto</p>
               <button class="btn btn-primary btn-sm view-player-btn"
@@ -137,7 +137,7 @@
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Sara Pérez</h2>
-              <img src="assetss/sara.webp" class="card-img-top" alt="Jugadora Sara de Los Titanes">
+              <img src="assetss/img/sara.webp" class="card-img-top" alt="Jugadora Sara de Los Titanes">
               <h3>Los Titanes</h3>
               <p class="card-text">Voleibol</p>
               <button class="btn btn-primary btn-sm view-player-btn"
@@ -192,19 +192,19 @@
       <!-- Social media -->
       <div class="col-md-4 mb-3">
         <h5>Redes Sociales</h5>
-        <a href="https://www.instagram.com"><img src="assetss/instagram.png" width="40"></a>
-        <a href="https://www.facebook.com"><img src="assetss/facebook.png" width="40"></a>
-        <a href="https://www.x.com"><img src="assetss/X_icon.png" width="40"></a>
+        <a href="https://www.instagram.com"><img src="assetss/img/instagram.png" width="40"></a>
+        <a href="https://www.facebook.com"><img src="assetss/img/facebook.png" width="40"></a>
+        <a href="https://www.x.com"><img src="assetss/img/X_icon.png" width="40"></a>
       </div>
     </div>
     <div class="text-center mt-6">
-      <small>&copy; 2025 Centro Educativo. Todos los derechos reservados.</small>
+      <small>&copy; 2025 Deportes - IES Maestre Calatrava. Todos los derechos reservados.</small>
     </div>
   </div>
   </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!-- My JS -->
-     <script src="js/main.js"></script>
+     <script src="bootstrap/js/main.js"></script>
   </body>
 </html>
