--- a/resultados.html
+++ b/resultados.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
-                <img src="assetss/la-liga.png" width="200"/>
+                <img src="assetss/img/logo.png"/>
             </a>
             <!-- Responsive button collapsable -->
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="equipos.html">Equipos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="resultados.html">Resultados</a>
+                    <a class="nav-link active" href="resultados.html">Resultados</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="clasificaciones.html">Clasificaciones</a>
@@ -156,19 +156,19 @@
       <!-- Social media -->
       <div class="col-md-4 mb-3">
         <h5>Redes Sociales</h5>
-        <a href="https://www.instagram.com"><img src="assetss/instagram.png" width="40"></a>
-        <a href="https://www.facebook.com"><img src="assetss/facebook.png" width="40"></a>
-        <a href="https://www.x.com"><img src="assetss/X_icon.png" width="40"></a>
+        <a href="https://www.instagram.com"><img src="assetss/img/instagram.png" width="40"></a>
+        <a href="https://www.facebook.com"><img src="assetss/img/facebook.png" width="40"></a>
+        <a href="https://www.x.com"><img src="assetss/img/X_icon.png" width="40"></a>
       </div>
     </div>
     <div class="text-center mt-6">
-      <small>&copy; 2025 Centro Educativo. Todos los derechos reservados.</small>
+      <small>&copy; 2025 Deportes - IES Maestre Calatrava. Todos los derechos reservados.</small>
     </div>
   </div>
   </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!-- My JS -->
-     <script src="js/main.js"></script>
+     <script src="bootstrap/js/main.js"></script>
   </body>
 </html>
